assets/css/style.css
/* ... */
:root[data-theme="light"]{
	/* Typography Colors */
	--color-text-primary: oklch(0.15 0.03 265);   /* White */
	--color-text-primary-muted: oklch(0.4 0.03 265);     /* Off white */
	--color-subtext: oklch(0.50 0.02 265); /* Subtext */

	/* Brand Colors */
	--color-bg-dark: oklch(0.92 0.015 265);   /* Plano de fundo */
	--color-bg: oklch(0.96 0.015 265);   /* Plano de fundo */
	--color-bg-light: oklch(1 0.015 265);
	--color-accent1: oklch(0.66 0.1 265); /* CTA Button, find #025bb0 for light mode later */
	--color-accent1-hover: #0372db; /* CTA Button brighter*/
	--color-accent2: oklch(0.4 0.1 85); /* Hover amarelo */

	/* Feedback Colors */
	--color-success: oklch(0.5 0.05 160); 
	--color-warning: oklch(0.5 0.05 100);
	--color-danger: oklch(0.5 0.05 30);

	/* Decoration Colors */
	--color-highlight: oklch(1 0.03 265);
	--color-border: oklch(0.6 0.03 265);
	--color-border-muted: oklch(0.7 0.03 265);
	--color-info: oklch(0.5 0.05 260);

	/* Gradients */
	--gradient-bg: linear-gradient(0deg, var(--color-bg) 95%, var(--color-bg-light));
	--gradient-bg-hover: linear-gradient(0deg, var(--color-bg), var(--color-bg-light));

	/* Properties and Values*/
	--shadow: 
			0px 4px 6px -1px oklch(0 0 0 / 0.02),
    	0px 2px 4px -1px oklch(0 0 0 / 0.02); /*Deslocamento X, Deslocamento Y, Blur, Cor da sombra RGBA*/
	--shadow-hover: 
			0px 10px 15px -3px oklch(0 0 0 / 0.08),
    	0px 4px 6px -2px oklch(0 0 0 / 0.12);
	--shadow-active:  
			0px 1px 2px oklch(0 0 0 / 0.05);
	--border: solid 1px var(--color-bg); /* Borda na cor do bg */
}

:root[data-theme="light"] .logo-header{
	content: url("/assets/img/LogoDark_Pedro AGA Silva Engenheiro Mecânico.png");
}


/* ────────────────────────────────────────────────────────────────────────── */
/* ██████████████████    ✏️ RESET & GLOBAL STYLES    ███████████████████████ */
/* ────────────────────────────────────────────────────────────────────────── */

*{
	/* Layout Padrão */
	margin: 0;
	padding: 0;
	box-sizing: border-box;

	/* Tipografia Padrão */
	color: var(--color-text-primary-muted); /*Muted TextColor*/
	font-family: var(--font-body);
	font-size: 1rem; /*16px*/
	line-height: 1.4; /*Espaçamento entre linhas*/
}

html{
	/* Effects */
	scroll-behavior: smooth;
}

body{
	/* Layout */
	overflow-x: hidden; /* Esconde tudo que está fora da tela */
	/* Sizing */
	width: 100%; /* A página sempre vai ter a largura da tela */
  min-height: 100vh; /* Altura mínima, garante que rodapé fica colado no final da tela mesmo em páginas curtas */
	/* Typograph */
	text-wrap: pretty;
	/* Visuals */
	background-color: var(--color-bg-dark);
}


/* ────────────────────────────────────────────────────────────────────────── */
/* ██████████████████████████  📝 TIPOGRAFIA  ██████████████████████████████ */
/* ────────────────────────────────────────────────────────────────────────── */

h1{
	/* Sizing */
	margin-top: var(--spacing4); /*Espaçamento de paragrafo BEFORE*/
	margin-bottom: var(--spacing2); /*Espaçamento de paragrafo AFTER*/
	/* Typography */
	font-size: var(--spacing7); /*48px*/
	font-weight: bold;
	line-height: 1.1; /*Espaçamento entre linhas*/
	letter-spacing: -0.02em;
	/* Visuals */
	color: var(--color-text-primary); /*Primary TextColor*/
}

h2{
	/* Sizing */
	margin-top: var(--spacing4); /*Espaçamento de paragrafo BEFORE*/
	margin-bottom: var(--spacing2); /*Espaçamento de paragrafo AFTER*/
	/* Typography */
	font-size: var(--spacing67); /*40px*/
	font-weight: bold;
	line-height: 1.1; /*Espaçamento entre linhas*/
	letter-spacing: -0.01em;
	/* Visuals */
	color: var(--color-text-primary-muted); /*Muted TextColor*/
}

h3{
	/* Sizing */
	margin-top: var(--spacing4); /*Espaçamento de paragrafo BEFORE*/
	margin-bottom: var(--spacing2); /*Espaçamento de paragrafo AFTER*/
	/* Typography */
	font-size: var(--spacing6);/*32px*/
	font-weight: bold;
	line-height: 1.1; /*Espaçamento entre linhas*/
	/* Visuals */
	color: var(--color-text-primary-muted); /*Muted TextColor*/
}

h4{
	/* Sizing */
	margin-top: var(--spacing4); /*Espaçamento de paragrafo BEFORE*/
	margin-bottom: var(--spacing2); /*Espaçamento de paragrafo AFTER*/
	/* Typography */
	font-size: var(--spacing5);/*24px*/
	font-weight: bold;
	line-height: 1.1; /*Espaçamento entre linhas*/
	/* Visuals */
	color: var(--color-text-primary-muted); /*Muted TextColor*/
}

p{
	/* Sizing */
	margin-top: var(--spacing4); /*Espaçamento de paragrafo BEFORE*/
	margin-bottom: var(--spacing2); /*Espaçamento de paragrafo AFTER*/
	/* Typography */
	font-size: var(--spacing4);/*16px*/
	font-weight: normal;
	line-height: 1.4; /*Espaçamento entre linhas*/
	/* Visuals */
	color: var(--color-text-primary-muted); /*Muted TextColor*/
}

a{
	/* Typography */
	font-size: var(--spacing4);/*16px*/
	font-weight: normal;
	line-height: 1.4; /*Espaçamento entre linhas*/
	/* Visuals */
	color: var(--color-text-primary); /*Primary TextColor*/
	text-decoration: none;
}

a:hover{
	/* Visuals */
	opacity: 0.8;
}

strong {
  /* Typography */
  font-size: var(--spacing45);
  line-height: 1.1;
  /* Visuals */
  color: var(--color-text-primary);
}

.subtext{
	/* Typography */
	font-size: var(--spacing3); /* Levemente menor que o corpo */
	/* Visuals */
	color: var(--color-subtext);
  opacity: 0.8;
}

.span{
    /* Layout */
    display: block; /* Sozinho na linha */
    /* Typography */
    white-space: nowrap;
}
/* ... */

